# DreamServer

./: .gitignore  README.md  install.ps1
.github/workflows/: autonomous-code-scanner.yml  claude-review.yml  issue-to-pr.yml  nightly-code-review.yml  test-linux.yml  validate-compose.yml
dream-server/: .env.example  .env.schema.json  .gitignore  PSScriptAnalyzerSettings.psd1  SECURITY.md  docker-compose.base.yml  dream-cli  dream-preflight.sh  get-dream-server.sh  install-core.sh
dream-server/config/: core-service-ids.json  extensions-catalog.json
dream-server/config/n8n/: catalog.json
dream-server/docs/: DASHBOARD-API-DEVELOPMENT.md  DREAM-PROXY.md  HERMES.md  MULTI-USER-SETUP.md  README.md  TROUBLESHOOTING.md  WINDOWS-TROUBLESHOOTING-GUIDE.md
dream-server/extensions/services/dreamforge/rust/crates/dreamforge-rag/: Cargo.toml
dream-server/extensions/services/dreamforge/rust/crates/dreamforge-rag/src/: chunker.rs  embeddings.rs  lib.rs  pipeline.rs  vector_store.rs
dream-server/extensions/services/dreamforge/rust/crates/dreamforge-server/: Cargo.toml
dream-server/extensions/services/dreamforge/rust/crates/dreamforge-server/src/: agent_bridge.rs  config.rs  documents.rs  files.rs  lib.rs  main.rs  memory_routes.rs  routes.rs  session_store.rs  voice.rs  ws.rs  ws_types.rs
dream-server/extensions/templates/: compose-gpu-only.yaml  compose-template.yaml
dream-server/installers/lib/: compose-select.sh  detection.sh  tier-map.sh  ui.sh
dream-server/scripts/: bootstrap-upgrade.sh  dream-doctor.sh  health-check.sh  resolve-compose-stack.sh  validate-sim-summary.py
dream-server/tests/: run-bats.sh  test-cpu-only-path.sh  test-tier-map.sh  test-windows-report-command.sh
(+254 files in other folders)
