[package]
name = "dreamforge-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"

[lints]
workspace = true
