[package]
name = "dreamforge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["secret-scanner"]
secret-scanner = ["runtime/secret-scanner"]
anthropic = ["api/anthropic"]

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
dreamforge-rag = { path = "../dreamforge-rag" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
